--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="www.facebook.com" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="www.instagram.com/pabishek" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="www.github.com/abhisekpandey" class="github"><i class="icofont-github"></i></a>
+        <a href="https://www.facebook.com" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/pabishek" target="_blank" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.github.com/abhisekpandey" target="_blank" class="github"><i class="icofont-github"></i></a>
       </div>
 
     </div>
@@ -466,9 +466,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="www.github.com/abhisekpandey" class="Github"><i class="icofont-github"></i></a>
-              <a href="www.facebook.com" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="www.instagram.com/pabishek" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.facebook.com" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
+              <a href="https://www.instagram.com/pabishek" target="_blank" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.github.com/abhisekpandey" target="_blank" class="github"><i class="icofont-github"></i></a>             
             </div>
           </div>
         </div>
